--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.2.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
