--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.0.2",
     "postcss": "^8.4.47",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12",
