--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
